# flatperf

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/flatperf/: __init__.py  __main__.py  commands.py  generate.py
src/flatperf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/flatprofiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: __init__.py  conftest.py  test_aggregate_commands.py  test_build_commands.py  test_cli.py  test_crypto_compress_commands.py  test_generate.py  test_join_commands.py  test_search_commands.py
