[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flatperf"
version = "0.1.0"
description = "Profiling toolkit for Flatseek build pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Judotens Budiarto", email = "judotens@flatseek.io"}
]
keywords = ["flatseek", "profiling", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache License 2.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "flatseek>=0.1.0",
    "flatbench>=0.1.0",
]

[project.scripts]
flatperf = "flatperf.__main__:main"

[project.urls]
Homepage = "https://github.com/flatseek/flatperf"
Repository = "https://github.com/flatseek/flatperf"
Documentation = "https://github.com/flatseek/flatperf#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/flatperf"]
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]